<resources>
    <string name="app_name">MissingPeopleApp</string>
    <string name="profile_info_button">Profile Info Button</string>
    <string name="profile_posts_button">Profile Posts Button</string>
    <string name="my_name">My Name</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_hint">+962777733340</string>
    <string name="city">City</string>
    <string name="amman">Amman</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="add_photo">Add Photo</string>
</resources>